--- a/IST541/lab4/css/style.css
+++ b/IST541/lab4/css/style.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-	background-image: url("../img/background.jpg");
+	background-color:lavender;
 	color: #1B1818;          /* text color for the entire document */
 	font-size: 12px;
 	font-family:Verdana, Geneva, sans-serif;
@@ -13,7 +13,7 @@ body {
 	width:900px;
 	margin:0 auto;         /* centers wrapper */
  	text-align:center;
-	background-color: rgba(255, 255, 255, 0.8);  /* creates white background with 80% opacity */
+	
 }
 
 table {
@@ -44,6 +44,36 @@ audio {
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+nav {
+  text-align: center;
+  margin: 20px 0;
+}
+
+/* Style the links to look like buttons */
+.nav a {
+  background-color:antiquewhite;
+  border: 3px solid black;
+  border-radius: 10px;
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 5px;
+  display: inline-block;
+  transition: 0.3s ease;
+}
+
+/* Hover effect */
+.nav a:hover {
+  background-color:antiquewhite;
+  transform: scale(1.05);
+}
+
+/* Highlight the active page */
+.nav a.active {
+  background-color:antiquewhite;
 }
 
 
