--- a/IST541/lab4/css/styles.css
+++ b/IST541/lab4/css/styles.css
@@ -1,7 +1,11 @@
-@charset "utf-8";
-/* CSS Document */
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>video</title>
+	 <link rel="stylesheet" href="css/style.css">
+</head>
 
-
-
-
-
+<body>
+</body>
+</html>
